<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/purple">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="105dp">

        <ProgressBar
            android:id="@+id/progress"
            style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:progress="10"
            android:progressTint="@color/colorAccent"
            android:background="@color/darkBlue"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/taskBlue">
            <TextView
                android:id="@+id/questionNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:paddingLeft="5dp"
                android:text="Question Number:"
                android:textColor="@color/white"
                android:textSize="16dp" />
            <TextView
                android:id="@+id/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:paddingRight="5dp"
                android:text="Score:"
                android:textColor="@color/white"
                android:textSize="16dp" />
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/question_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:layout_marginBottom="50dp"
        android:textSize="16dp"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp">
        <Button
        android:id="@+id/true_button"
        android:layout_width="70dp"
        android:layout_height="45dp"
        android:textStyle="bold"
        android:background="@drawable/ansbtn"
        android:text="@string/true_button"/>
        <Button
        android:id="@+id/false_button"
        android:layout_width="70dp"
        android:layout_height="45dp"
        android:layout_marginLeft="10dp"
        android:textStyle="bold"
        android:background="@drawable/ansbtn"
        android:text="@string/false_button"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="5dp">
    <Button
        android:id="@+id/cheat_button"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginBottom="5dp"
        android:background="@drawable/getset"
        android:text="@string/cheat_button"/>

    <Button
        android:id="@+id/reset_button"
        android:layout_width="66dp"
        android:layout_height="50dp"
        android:text="@string/reset_button"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:background="@drawable/getset"
        android:layout_marginLeft="75dp"
        android:layout_marginRight="0dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="100dp"
        android:layout_marginTop="5dp">
        <Button
            android:id="@+id/previous_button"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:background="@drawable/controlbtn"
            android:text="@string/previous_button"
            android:textStyle="bold"
            android:paddingRight="8dp"
            android:drawableLeft="@drawable/arrow_left"
            android:drawablePadding="4dp"/>
        <!--<Button-->
            <!--android:id="@+id/next_button"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/next_button"-->
            <!--android:drawableRight="@drawable/arrow_right"-->
            <!--android:drawablePadding="4dp"/>-->
        <ImageButton
            android:id="@+id/next_button"
            android:layout_width="30dp"
            android:layout_height="35dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/controlbtn"
            android:src="@drawable/arrow_right"
            android:contentDescription="@string/next_button"/>
    </LinearLayout>

    <Button
        android:id="@+id/resultSummary_button"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="25dp"
        android:background="@color/darkPurple"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="18dp"
        android:text="@string/resultSummary_button"
        android:layout_gravity="center_vertical"/>

</LinearLayout>
